--- a/scss/components/_AB_twitch_status.scss
+++ b/scss/components/_AB_twitch_status.scss
@@ -5,7 +5,7 @@
 
 @use 'AB_colors' as colors;
 
-.AB_twitch_status {
+.twitch_status_wrapper {
 
 	background: linear-gradient(45deg, #eee, #fff);
 	border: 1px solid #eee;
