Lower component padding

--- a/scss/components/_AB_twitch_status.scss
+++ b/scss/components/_AB_twitch_status.scss
@@ -10,13 +10,13 @@
 	background: linear-gradient(45deg, #eee, #fff);
 	border: 1px solid #eee;
 	display: inline-block;
-	padding: 16px 16px 32px;
+	padding: 16px 16px 20px;
 
 	.twitch-logo {
 		width: 50px;
 	    margin-bottom: -25px;
 	    margin-right: 10px;
-	    fill: #9147ff;
+	    fill: #222;
 	}
 
 	.twitch-url {
