--- a/css/main.css
+++ b/css/main.css
@@ -21,13 +21,13 @@ body {
   background: linear-gradient(45deg, #eee, #fff);
   border: 1px solid #eee;
   display: inline-block;
-  padding: 16px 16px 32px;
+  padding: 16px 16px 20px;
 }
 .twitch_status_wrapper .twitch-logo {
   width: 50px;
   margin-bottom: -25px;
   margin-right: 10px;
-  fill: #9147ff;
+  fill: #222;
 }
 .twitch_status_wrapper .twitch-url {
   font-weight: bold;
